# planning_and_control_study_by_carla

./: .gitignore  README.md
docs/01_install/: how_to_install.md
docs/02_quick_start/: quick_to_run_simulation.md
docs/05_carla_ros_bridge/: how_to_generate_simulation.md  how_to_get_path.md
src/carla_msgs/: CMakeLists.txt
src/common/: CMakeLists.txt  package.xml
src/common/include/: log.hpp
src/common/include/common/: proto_util.hpp
src/common/include/math/: mpc_osqp.hpp
src/common/src/: proto_util.cpp
src/common/src/math/: mpc_osqp.cpp
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: ControlCommand.msg  Header.msg  LateralControlDebug.msg  PathPoint.msg  Pose.msg  Trajectory.msg  TrajectoryPoint.msg
src/control/: CMakeLists.txt  backup_CMakeLists   package.xml
src/control/common_msgs/: control_cmd.proto
src/control/config/: controller_conf.pb.txt
src/control/include/control/: control_node.hpp  digital_filter.hpp  digital_filter_coefficients.hpp  interpolation_1d.hpp  lat_controller.hpp  mean_filter.hpp  mpc_controller.hpp  trajectory_analyzer.hpp
src/control/launch/: control_launch.py
src/control/param/: lat_controller_config.yaml
src/control/proto/: controller_conf.proto  gain_scheduler_conf.proto  lat_based_lqr_controller_conf.proto
src/control/src/: README.md  control_main.cpp  control_node.cpp  digital_filter.cpp  digital_filter_coefficients.cpp  interpolation_1d.cpp  lat_controller.cpp  mean_filter.cpp  mpc_controller.cpp  trajectory_analyzer.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/include/localization/: localization_node.hpp
src/localization/src/: localization_main.cpp  localization_node.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/data/: reference_line_town03_01 copy.txt  reference_line_town03_01.txt
src/planning/include/planning/: cubic_spline.hpp  planning_node.hpp  reference_line.hpp
src/planning/src/: planning_main.cpp  planning_node.cpp  reference_line.cpp
src/tools/: README.md  get_route.py  get_route.sh  get_vehicle_parameters.py  reference_line_Town03.txt  spawn_points_Town03.txt
src/vehicle/: CMakeLists.txt  package.xml
src/vehicle/include/vehicle/: vehicle_main.hpp
src/vehicle/src/: vehicle_main.cpp
